--- a/timer/manifest.json
+++ b/timer/manifest.json
@@ -3,19 +3,20 @@
   "short_name": "Timer",
   "description": "Track your work and tasks with a retro-style timer",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#1a1a1a",
   "theme_color": "#000000",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "stopwatch.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "stopwatch.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -29,14 +30,14 @@
       "short_name": "5 Min",
       "description": "Start a 5 minute timer",
       "url": "./index.html?preset=5",
-      "icons": [{ "src": "icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "stopwatch.png", "sizes": "192x192" }]
     },
     {
       "name": "10 Minute Timer",
       "short_name": "10 Min",
       "description": "Start a 10 minute timer",
       "url": "./index.html?preset=10",
-      "icons": [{ "src": "icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "stopwatch.png", "sizes": "192x192" }]
     }
   ]
 }
